Bug 164143 - Tooltip with path to macro in new Macro Organizer dialog contains percent symbols instead Cyrillic
Summary: Tooltip with path to macro in new Macro Organizer dialog contains percent sym...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:25.8.0 target:25.2.0.0.beta2
Keywords:
Depends on:
Blocks: Tooltip Macro_Manager
  Show dependency treegraph
 
Reported: 2024-12-03 12:04 UTC by Roman Kuznetsov
Modified: 2024-12-16 14:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot with the problem illustration (18.75 KB, image/png)
2024-12-03 12:06 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2024-12-03 12:04:03 UTC
Description:
Tooltip with path to macro in new Macro Organizer dialog contains percent symbols instead Cyrillic

Steps to Reproduce:
1. Make sure your LibreOffice was installed to path contains Cyrillic letters
2. Make sure you have enabled experimental features
3. Open Tools-Macros-Macro manager
4. Expand any Basic module
5. Move mouse cursor above module name and look at the tooltip => it contains many percent symbols instead Cyrillic

Actual Results:
Tooltip with path to macro in new Macro Organizer dialog contains percent symbols instead Cyrillic

Expected Results:
Tooltip with path to macro in new Macro Organizer dialog just shows Cyrillic in path


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 94afced0195ef824e575176e33c79ca57484cd5c
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded
Comment 1 Roman Kuznetsov 2024-12-03 12:06:35 UTC
Created attachment 197915 [details]
Screenshot with the problem illustration
Comment 2 Mike Kaganski 2024-12-03 12:34:32 UTC
A code pointer: cui/source/dialogs/MacroManagerDialog.cxx, QueryTooltip method.

It needs to convert the URL into system path.
Comment 3 Jim Raykowski 2024-12-06 00:46:30 UTC
This report allowed me to find a crash that occurs when importing a library, please see: https://gerrit.libreoffice.org/c/core/+/177924

I made a path having Cyrillic symbols and imported a Basic library with read-only setting to test the tool tip. After adding some code using the code pointer given by Mike the Cyrillic symbols appear as expected for me.

In addition, the same approach is used in the proposed patch below to make the expected symbols show in the Description box. 

Here is a link to the proposed patch:
https://gerrit.libreoffice.org/c/core/+/177925
Comment 4 Commit Notification 2024-12-07 16:19:37 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ab5b5ad75d7816d449255b8e0663032749bfc041

Resolves tdf#164143 Tooltip with path to macro in new Macro Organizer

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Roman Kuznetsov 2024-12-09 14:12:05 UTC
Verified in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a1b8b44bf99b331f6cd4b4583d08b6a01d5c4f03
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

Thanks, Jim
Comment 6 Commit Notification 2024-12-16 14:54:13 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/a222c4a04e9a16583c7d7d49ec4c502ba169ed3d

Resolves tdf#164143 Tooltip with path to macro in new Macro Organizer

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.