Resolves tdf#164143 Tooltip with path to macro in new Macro Organizer

dialog contains percent symbols instead Cyrillic

Additionally use the same approach to make the expected symbols
appear in the description text view.

Change-Id: I89adafde4305dbe9a6e56481ed246376bc1d94a1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177925
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178563